--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
       href="https://unpkg.com/swiper/swiper-bundle.min.css"
     />
     <link rel="stylesheet" href="style.css" />
-    <title>Document</title>
+    <title>ExcluiveLane</title>
   </head>
   <body>
 
